@@ -49,6 +49,8 @@ extern int tui_active_border_attrs;
 
 extern int tui_update_variables (void);
 
+extern void tui_initialize_win (void);
+
 /* Update gdb's knowledge of the terminal size.  */
 extern void tui_update_gdb_sizes (void);
 
